# Personal-Website

./: .gitignore  .replit  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  posts.json  pyproject.toml  recover_blog.py  replit.md
.astro/: settings.json
import/: posts.json
posts/: 2002-06-24-hey-im-married.md  2002-09-14-10-days-1-camera-and-some-fantastic-light.md  2003-02-28-project-fireworks-release-first-commercial-fireworks-mx-exte.md  2003-04-04-duplicate-and-offset-most-downloaded-fw-utility-on-the-excha.md  2003-04-28-phireworx-release-super-guides-for-fireworks-mx.md  2003-07-14-brian-edgin-joins-phireworx-as-senior-developer.md  2003-09-08-the-best-ps200-i-ever-spent.md  2003-10-13-my-employers-are-looking-for-a-new-media-developer.md  2003-12-05-something-weird-with-php-includes.md  2004-01-21-the-longest-non-classical-song.md  2004-02-04-its-been-a-hard-week-for-my-car.md  2004-02-16-make-hotel-reservations.md  2004-02-17-macromedia-devnet-resource-kit-vol-6-released.md  2004-02-18-footer-fetish.md  2004-02-22-goodbye-youth-hello-responsibility.md  2004-02-24-very-occasional-central.md  2004-04-08-small-budgets-are-great.md  2004-04-21-possible-issues-with-fireworks-mx-extensions-in-mx-2004.md  2004-04-26-fireworks-vs-illustrator-via-hicksdesign.md  2004-05-07-extending-fireworks.md  2004-05-10-blogger-relaunch.md  2004-05-10-out-of-the-loop.md  2004-05-12-happy-birthday-to-me.md  2004-05-14-two-months-old.md  2004-05-17-junk-software.md  2004-05-18-drop-shadows-are-in.md  2004-05-24-fireworks-api-wish.md  (+109 more)
public/: robots.txt
(+871 files in other folders)
